--- a/Misfits/index.html
+++ b/Misfits/index.html
@@ -11,7 +11,7 @@
       type="image/x-icon"
     /> 
     <link rel="stylesheet" href="assets/aos-master/aos-master/dist/aos.css" />
-    <title>Zamyugan Academy</title>
+    <title>Misfits Project</title>
   </head>
   <body>
     <div class="preloader"></div>
@@ -20,24 +20,22 @@
       <div class="banner">
         <nav>
           <div class="logo-cont">
-            <a href="./pages/signup.html">
-              <img
-                src="assets/images/logo.png"
-                alt="Logo"
-                class="logo"
-                title="Zamyugan Academy"
-              />
-            </a>
+            <a href="#Home">Misfits Project</a>
           </div>
           <ul>
             <li>
-              <a href="#About" title="About Us"><img src="./assets/images/about (2).png" alt=""></a>
+              <a href="#About" title="About Us">About</a>
             </li>
             <li>
-              <a href="#Services" title="Services"><img src="./assets/images/technical-support (1).png" alt=""></a>
+              <a href="#Services" title="Services">Services</a>
             </li>
             <li>
-              <a href="#Contact" title="Get In Touch"><img src="./assets/images/question-mark.png" alt=""></a>
+              <a href="#Contact" title="Get In Touch">Contact</a>
+            </li>
+            <li>
+              <button>
+                <a href="pages/signup.html">Sign Up</a>
+              </button>
             </li>
           </ul>
         </nav>
@@ -78,7 +76,7 @@
               </div>
               <div class="div-2-cont">
                 <div class="div-2">
-                  <h2>Zamyugan Academy</h2>
+                  <h2>Welcome</h2>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Commodi, reiciendis, unde magnam sunt odit nesciunt sapiente
@@ -117,3 +115,6 @@
   <script src="./assets/js/script.js"></script>
   <script src="assets/aos-master/aos-master/dist/aos.js"></script>
 </html>
+
+
+
