--- a/Misfits/pages/signup.html
+++ b/Misfits/pages/signup.html
@@ -41,6 +41,7 @@
                 <input type="submit" value="Sign Up with Google">
             </div>
             <p>Already have an account ? <a href="#" class="login">Log In</a></p>
+            <p>Return to homepage <a href="../index.html" class="return">Return</a></p>
         </div>
         <div class="form signin">
             <h2>Sign In</h2>
@@ -64,6 +65,7 @@
                 <input type="submit" value="Log in with Google">
             </div>
             <p>Don't have an account ? <a href="#" class="create">Sign Up</a></p>
+            <p>Return to homepage <a href="../index.html" class="return">Return</a></p>
         </div>
     
     </div>
